--- a/barbershop/index.html
+++ b/barbershop/index.html
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Барбершоп «Бородинский»</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header class="main-header">
-    <div class="container">
+    <div class="container clearfix">
       <nav class="main-navigation">
         <ul>
           <li>
@@ -51,7 +52,7 @@
           <p>Наши мастера — профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определенный статус?</p>
       </div>
     </div>
-    <section class="index-content">
+    <section class="index-content clearfix">
       <div class="index-content-left">
         <h2 class="txt-caption">Новости</h2>
         <ul>
@@ -79,7 +80,7 @@
             </div>
       </div>
     </section>
-    <section class="index-content">
+    <section class="index-content clearfix">
         <div class="index-content-left">
           <h3 class="txt-caption">Контактная информация</h3>
             <p>
@@ -115,7 +116,7 @@
     </section>
   </main>
   <footer class="main-footer">
-      <div class="container">
+      <div class="container clearfix">
           <div class="footer-contacts">
                 Барбершоп «Бородинский»<br>
                 Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
@@ -148,6 +149,7 @@
     </form>
   </div>
   <div class="map popup">
+    <iframe src="https://yandex.ru/map-widget/v1/-/CBaj6BCYpC" width="765" height="560" frameborder="0"></iframe>
   </div>
 </body>
 </html>
