--- a/barbershop/price-list.html
+++ b/barbershop/price-list.html
@@ -5,11 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Прайс-лист «Бородинский»</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header class="main-header">
-    <div class="container">
-      <div class="top-logo">
+    <div class="container clearfix">
+      <div class="header-logo">
         <a href="index.html">
           <img src="img/logo-header.png" width="111" height="24" alt="Барбершоп «Бородинский»">
         </a>
@@ -38,60 +39,62 @@
       </div>
     </div>
   </header>
-  <main class="container">
-    <h1>Прайс-лист</h1>
-    <div class="breadcrumbs">
-      <ul>
-        <li><a href="index.html">Главная</a></li>
-        <li>Прайс-лист</li>
-      </ul>
+  <main>
+    <div class="container clearfix">
+      <h1>Прайс-лист</h1>
+      <div class="breadcrumbs">
+          <ul>
+            <li><a href="index.html">Главная</a></li>
+            <li>Прайс-лист</li>
+          </ul>
+      </div>
+      <div><span class="lg-txt">ИСТИННО МУЖСКАЯ КЛАССИКА</span></div>
+      <section class="price-info clearfix">
+          <div class="price-info-left">
+            <h3 class="txt-caption">МЫ ИСПОЛЬЗУЕМ ТОЛЬКО ЛУЧШИЕ СРЕДСТВА:</h3>
+            <ul>
+              <li><a href="#">Baxter of California</a></li>
+              <li><a href="#">Mr Natty</a></li>
+              <li><a href="#">Suavecito</a></li>
+              <li><a href="#">Malin+Goetz</a></li>
+            </ul>
+          </div>
+          <div class="price-info-right">
+            <h3 class="txt-caption">ЦЕНЫ НА УСЛУГИ НАШИХ МАСТЕРОВ:</h3>
+            <table>
+              <tr>
+                <td>СТРИЖКА</td>
+                <td>1500 &#8381;</td>
+              </tr>
+              <tr>
+                  <td>СТРИЖКА БОРОДЫ</td>
+                  <td>500 &#8381;</td>
+              </tr>
+              <tr>
+                  <td>НАКРУТКА УСОВ</td>
+                  <td>350 &#8381;</td>
+              </tr>
+            </table>
+          </div>
+      </section>
+      <section class="about-us">
+          <h3 class="txt-caption">НЕСКОЛЬКО СЛОВ О НАС:</h3>
+          <div class="about-us-left">
+            <p>Наша парикмахерская занимается исключительно мужскими стрижками. 
+              Стрижка каждого клиента для нас - это уникальная и продуманная до мелочей работа.
+              Мы не работаем на количество, мы делаем качество.
+            </p>
+          </div>
+          <div class="about-us-right">
+              <p>Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, 
+                даже в обеденный перерыв. 
+                Здесь вы можете погрузиться в удобную для вас атмосферу, чувствовать себя комфортно и свободно!</p>
+          </div>
+      </section>
     </div>
-    <div><span class="lg-txt">ИСТИННО МУЖСКАЯ КЛАССИКА</span></div>
-    <section class="price-info">
-      <div class="price-info-left">
-        <h3 class="txt-caption">МЫ ИСПОЛЬЗУЕМ ТОЛЬКО ЛУЧШИЕ СРЕДСТВА:</h3>
-        <ul>
-          <li><a href="#">Baxter of California</a></li>
-          <li><a href="#">Mr Natty</a></li>
-          <li><a href="#">Suavecito</a></li>
-          <li><a href="#">Malin+Goetz</a></li>
-        </ul>
-      </div>
-      <div class="price-info-right">
-        <h3 class="txt-caption">ЦЕНЫ НА УСЛУГИ НАШИХ МАСТЕРОВ:</h3>
-        <table>
-          <tr>
-            <td>СТРИЖКА</td>
-            <td>1500 &#8381;</td>
-          </tr>
-          <tr>
-              <td>СТРИЖКА БОРОДЫ</td>
-              <td>500 &#8381;</td>
-          </tr>
-          <tr>
-              <td>НАКРУТКА УСОВ</td>
-              <td>350 &#8381;</td>
-          </tr>
-        </table>
-      </div>
-    </section>
-    <section class="about-us">
-      <h3 class="txt-caption">НЕСКОЛЬКО СЛОВ О НАС:</h3>
-      <div class="about-us-left">
-        <p>Наша парикмахерская занимается исключительно мужскими стрижками. 
-          Стрижка каждого клиента для нас - это уникальная и продуманная до мелочей работа.
-          Мы не работаем на количество, мы делаем качество.
-        </p>
-      </div>
-      <div class="about-us-right">
-          <p>Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, 
-            даже в обеденный перерыв. 
-            Здесь вы можете погрузиться в удобную для вас атмосферу, чувствовать себя комфортно и свободно!</p>
-      </div>
-    </section>
   </main>
   <footer class="main-footer">
-      <div class="container">
+      <div class="container clearfix">
           <div class="footer-contacts">
                 Барбершоп «Бородинский»<br>
                 Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
@@ -124,6 +127,7 @@
     </form>
   </div>
   <div class="map popup">
+    <iframe src="https://yandex.ru/map-widget/v1/-/CBaj6BCYpC" width="765" height="560" frameborder="0"></iframe>
   </div>
 </body>
 </html>
